Fix front and "go further" bugs (svg size on the login page, action bar bug in the new evaluation view and svg overflow bugs)

--- a/modules/mod_emundus_user_dropdown/style/mod_emundus_user_dropdown.css
+++ b/modules/mod_emundus_user_dropdown/style/mod_emundus_user_dropdown.css
@@ -376,7 +376,7 @@ a.btn.btn-danger:not(.btn-creer-compte):hover {
 #background-shapes {
     position: absolute;
     height: 100%;
-    top: 0;
+    top: -7px;
     right: 0;
     pointer-events: none;
     z-index: -1;
